CHANGES IN FLTK 1.1.0b7

	- More documentation updates...
	- Mac OS X support works 95%
	- Fl_Button::handle() was calling take_focus() for both
	  FL_PUSH and FL_DRAG.
	- File and memory fixes for Fl_GIF_Image, Fl_PNG_Image,
	  Fl_PNM_Image, Fl_Shared_Image, Fl_Tiled_Image, and
	  Fl_XBM_Image.
	- filename_match() didn't handle backslashes properly
	  under WIN32, and didn't use a case-insensitive
	  comparison under MacOS X.
	- The Fl class was missing access methods for the
	  FL_MOUSEWHEEL event values - Fl::event_dx() and
	  Fl::event_dy().
	- The default help string didn't include the -nokbd
	  option.
	- "make uninstall" didn't uninstall the static OpenGL
	  widget library.
	- Mac cursor shapes added...
	- Fl_Text_Display would lockup when all text was
	  deleted; for example, when running the editor
	  demo, you couldn't load a second file.
	- Added Fl::lock() and friends from FLTK 2.0 to
	  support multi-threaded applications; see the
	  "threads" demo for an example of this.
	- Fl_Check_Button and Fl_Round_Button now use the
	  FL_NO_BOX box type to show the background of the
	  parent widget.
	- Tweeked the plastic boxtype code to draw with the
	  right shading for narrow, but horizontal buttons.
	- Fl_Progress now shades the bounding box instead of
	  drawing a polygon inside it.
	- Fl::warning() under WIN32 defaults to no action. This
	  avoids warning dialogs when an image file cannot be
	  loaded.
	- Some Win32 drivers would draw into wrong buffers
	  after OpenGL mode change
	- The file chooser would cause a segfault if you
	  clicked in an empty area of the file list.
	- Fl_File_Icon::labeltype() would cause a segfault
	  if the value pointer was NULL.
	- Fl_File_Icon::load_image() could cause segfaults
	  (NULL data and incrementing the data pointer too
	  often.)
	- Fl_File_Icon::load_image() now handles 2-byte
	  per color XPM files.
	- Some Win32 drivers would draw into wrong buffers
	  after OpenGL mode change.