@@ -1,5 +1,63 @@
-<HTML><BODY>
-<H1 ALIGN=RIGHT><A NAME=license>H - Software License</A></H1>
+<HTML>
+<BODY>
+
+<H1 ALIGN="RIGHT"><A NAME="license">H - FLTK License</A></H1>
+
+<P ALIGN="RIGHT">December 11, 2001</P>
+
+<P>The FLTK library and included programs are provided under the terms
+of the GNU Library General Public License (LGPL) with the following
+exceptions:</P>
+
+<OL>
+
+	<LI>Modifications to the FLTK configure script, config
+	header file, and makefiles by themselves to support
+	a specific platform do not constitute a modified or
+	derivative work.<BR>
+	<BR>
+	The authors do request that such modifications be
+	contributed to the FLTK project - send all
+	contributions to "fltk-bugs@fltk.org".<BR>
+	<BR>
+	</LI>
+
+	<LI>Widgets that are subclassed from FLTK widgets do not
+	constitute a derivative work.<BR>
+	<BR>
+	</LI>
+
+	<LI>Static linking of applications and widgets to the
+	FLTK library does not constitute a derivative work
+	and does not require the author to provide source
+	code for the application or widget, use the shared
+	FLTK libraries, or link their applications or
+	widgets against a user-supplied version of FLTK.<BR>
+	<BR>
+	If you link the application or widget to a modified
+	version of FLTK, then the changes to FLTK must be
+	provided under the terms of the LGPL in sections
+	1, 2, and 4.<BR>
+	<BR>
+	</LI>
+
+	<LI>You do not have to provide a copy of the FLTK license
+	with programs that are linked to the FLTK library, nor
+	do you have to identify the FLTK license in your
+	program or documentation as required by section 6
+	of the LGPL.<BR>
+	<BR>
+	However, programs must still identify their use of FLTK.
+	The following example statement can be included in user
+	documentation to satisfy this requirement:<BR>
+	<BR>
+	<I>[program/widget] is based in part on the work of
+	the FLTK project (http://www.fltk.org).</I></LI>
+
+</OL>
+
+<HR>
+
 <P ALIGN=CENTER><BIG>GNU LIBRARY GENERAL PUBLIC LICENSE</BIG></P>
 <P ALIGN=CENTER>Version 2, June 1991
 <BR> Copyright (C) 1991 Free Software Foundation, Inc.
@@ -376,4 +434,6 @@ FAILURE OF THE LIBRARY TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
 SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
 DAMAGES. </P>
 <P ALIGN="CENTER"><BIG>END OF TERMS AND CONDITIONS</BIG></P>
-</BODY></HTML>
+
+</BODY>
+</HTML>
